// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration simple SimpleDynMessages should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynMessages should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynMessages should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;

exports[`Integration simple SimpleDynMessages should display dynamic case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
    dynamic message
  </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynOverrideMessages should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynOverrideMessages should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynOverrideMessages should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      custom wildcard [unknown]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleDynOverrideMessages should display dynamic case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
    dynamic message
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideMessages should display case "one" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideMessages should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideMessages should display wildcard case for "dyn" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default wildcard (dyn)
    </span></span>
`;

exports[`Integration simple SimpleOverrideMessages should display wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;

exports[`Integration simple SimpleOverrideWildcard should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideWildcard should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideWildcard should display custom wildcard case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      custom wildcard [dyn]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleOverrideWildcard should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      custom wildcard [unknown]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration simple SimpleStdMessages should display case "one" 1`] = `
<span class="msg-switch"> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration simple SimpleStdMessages should display case "two" 1`] = `
<span class="msg-switch"> <!----> <span class="msg-case">
      default two
    </span>
<!----></span>
`;

exports[`Integration simple SimpleStdMessages should display wildcard case for "dyn" 1`] = `
<span class="msg-switch"> <!----> <!----> <span class="msg-case">
      default wildcard (dyn)
    </span></span>
`;

exports[`Integration simple SimpleStdMessages should display wildcard message for "unknown" 1`] = `
<span class="msg-switch"> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;
